--- a/.env_example
+++ b/.env_example
@@ -27,7 +27,7 @@ API_KEY=hydren_default_key
 # AFK
 AFK_TIME=60
 
-APP_NAME=HydrenDashboard
+APP_NAME=PlutoNodes
 APP_URL=http://127.0.0.1:3000
 APP_PORT=3000
 
@@ -50,4 +50,4 @@ DATABASE_COST=250 # Not Set
 ALLOCATION_COST=500 # Not Set
 
 # Developer
-VERSION=5.0
+VERSION=6.0
